--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </a>
         <ul class="main-menu">
           <li>
-            <h2>모집과정</h2>
+            <h2 class="main-menu-title">모집과정</h2>
             <ul class="sub-menu">
               <li>현재모집중인과정</li>
               <li>대구국비지원 진행중인과정</li>
@@ -80,7 +80,7 @@
             </ul>
           </li>
           <li>
-            <h2>입학상담</h2>
+            <h2 class="main-menu-title">입학상담</h2>
             <ul class="sub-menu">
               <li>온라인접수</li>
               <li>자주하는 질문</li>
@@ -89,7 +89,7 @@
             </ul>
           </li>
           <li>
-            <h2>과정소개</h2>
+            <h2 class="main-menu-title">과정소개</h2>
             <ul class="sub-menu">
               <li>IT•SW</li>
               <li>전기공사</li>
@@ -104,7 +104,7 @@
             </ul>
           </li>
           <li>
-            <h2>취업센터</h2>
+            <h2 class="main-menu-title">취업센터</h2>
             <ul class="sub-menu">
               <li>업체 채용 소식</li>
               <li>업무 협약 소식</li>
@@ -113,7 +113,7 @@
             </ul>
           </li>
           <li>
-            <h2>커뮤니티</h2>
+            <h2 class="main-menu-title">커뮤니티</h2>
             <ul class="sub-menu">
               <li>영진소식</li>
               <li>YJ 재능봉사단</li>
@@ -124,7 +124,7 @@
             </ul>
           </li>
           <li>
-            <h2>학교소개</h2>
+            <h2 class="main-menu-title">학교소개</h2>
             <ul class="sub-menu">
               <li>인사말</li>
               <li>조직도 및 연혁</li>
@@ -136,7 +136,7 @@
             </ul>
           </li>
           <li>
-            <h2>회원메뉴</h2>
+            <h2 class="main-menu-title">회원메뉴</h2>
             <ul class="sub-menu">
               <li>설문조사</li>
               <li>NCS평가</li>
