--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </div>
     <div class="maxwidth-container">
       <h2 class="section-title">portpolio</h2>
-      <section class="portpolio">
+      <section class="portfolio">
         <div>
           <img src="http://www.yjjob.or.kr/images/main/it-3.png" alt="" />
           <h3>영화관 관리 플랫폼(웹,앱)</h3>
