--- a/index.html
+++ b/index.html
@@ -205,13 +205,7 @@
           <li>인테리어</li>
         </ul>
 
-        <swiper-container
-          class="mySwiper"
-          pagination="true"
-          pagination-clickable="true"
-          space-between="30"
-          slides-per-view="4"
-        >
+        <swiper-container class="mySwiper" init="false">
           <swiper-slide><img src="images/design.png" alt="" /></swiper-slide>
           <swiper-slide><img src="images/electric.png" /></swiper-slide>
           <swiper-slide><img src="images/furniture_craft.png" /></swiper-slide>
@@ -295,5 +289,27 @@
 
     <!-- swiper -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
+
+    <script>
+      const swiperEl = document.querySelector('swiper-container');
+      Object.assign(swiperEl, {
+        slidesPerView: 1,
+        spaceBetween: 10,
+        pagination: {
+          clickable: true,
+        },
+        breakpoints: {
+          500: {
+            slidesPerView: 2,
+            spaceBetween: 20,
+          },
+          786: {
+            slidesPerView: 4,
+            spaceBetween: 40,
+          },
+        },
+      });
+      swiperEl.initialize();
+    </script>
   </body>
 </html>
