--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        border-radius: 18px;
+        overflow: hidden;
       }
 
       swiper-slide img {
