--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </head>
   <body>
     <header>
-      <video class="bg-video" muted autoplay loop>
+      <video class="bg-video" muted autoplay playsinline loop>
         <source src="video/yjjob.mp4" />
       </video>
       <a href="#" class="btn">
