--- a/index.html
+++ b/index.html
@@ -54,22 +54,26 @@
     </header>
 
     <nav>
-      <a class="menu-btn" href="#">
-        <i class="fas fa-bars fa-2x"></i>
-      </a>
+      <div class="nav-inner">
+        <a class="menu-btn" href="#">
+          <i class="fas fa-bars fa-2x"></i>
+        </a>
 
-      <img class="logo" src="images/logo.png" alt="yjjob" />
+        <img class="logo" src="images/logo.png" alt="yjjob" />
 
-      <a class="search" href="#">
-        <i class="fas fa-search"></i>
-      </a>
+        <a class="search" href="#">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+            <!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+            <path
+              d="M347.1 24.6c7.7-18.6 28-28.5 47.4-23.2l88 24C499.9 30.2 512 46 512 64c0 247.4-200.6 448-448 448c-18 0-33.8-12.1-38.6-29.5l-24-88c-5.3-19.4 4.6-39.7 23.2-47.4l96-40c16.3-6.8 35.2-2.1 46.3 11.6L207.3 368c70.4-33.3 127.4-90.3 160.7-160.7L318.7 167c-13.7-11.2-18.4-30-11.6-46.3l40-96z"
+            />
+          </svg>
+        </a>
+      </div>
     </nav>
 
     <div class="toggle-menu">
       <div class="menu-wrapper">
-        <a class="cancel-btn" href="#">
-          <i class="fas fa-bars fa-2x"></i>
-        </a>
         <ul class="main-menu">
           <li>
             <h2 class="main-menu-title">모집과정</h2>
@@ -223,6 +227,7 @@
         <div class="content">
           <h2>
             빅데이터 분석과 UI구현을 위한 자바(Java), 파이썬 (Python) 개발자
+            모집중
           </h2>
           <p>
             대용량의 데이터로부터 빅데이터 분석을 통해 유용한 정보를 찾고 목적에
@@ -301,11 +306,11 @@
           clickable: true,
         },
         breakpoints: {
-          500: {
+          501: {
             slidesPerView: 2,
             spaceBetween: 20,
           },
-          786: {
+          785: {
             slidesPerView: 4,
             spaceBetween: 40,
           },
