--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <title>영진직업전문학교</title>
     <link rel="stylesheet" href="./css/styles.css" />
     <!-- font awsome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css?_cacheOverride=1684634858144"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css?_cacheOverride=1684634858144" />
 
     <style>
       html,
@@ -48,9 +45,7 @@
       <video class="bg-video" muted autoplay playsinline loop>
         <source src="video/yjjob.mp4" />
       </video>
-      <a href="#" class="btn">
-        상담신청 하기<i class="fas fa-chevron-right"></i>
-      </a>
+      <a href="#" class="btn"> 상담신청 하기<i class="fas fa-chevron-right"></i> </a>
     </header>
 
     <nav>
@@ -160,36 +155,27 @@
       <h2 class="section-title">portpolio</h2>
       <section class="portfolio">
         <div>
-          <img src="http://www.yjjob.or.kr/images/main/it-3.png" alt="" />
+          <img src="images/it-3.png" alt="" />
           <h3>영화관 관리 플랫폼(웹,앱)</h3>
-          <p>
-            애플리케이션 설계, 인터페이스 구현, 서버 프로그램 구현, SQL 활용,
-            통합 구현 등
-          </p>
+          <p>애플리케이션 설계, 인터페이스 구현, 서버 프로그램 구현, SQL 활용, 통합 구현 등</p>
           <a href="#">더 알아보기<i class="fas fa-chevron-right"></i></a>
         </div>
         <div>
-          <img src="http://www.yjjob.or.kr/images/main/ki-3.gif" alt="" />
+          <img src="images/ki-3.gif" alt="" />
           <h3>CAD/CAM 3D기계설계가공</h3>
-          <p>
-            동력전달요소 설계, 체결요소 설계, 3D형상모델링 작업, 3D형상모델링
-            검토, 도면 분석
-          </p>
+          <p>동력전달요소 설계, 체결요소 설계, 3D형상모델링 작업, 3D형상모델링 검토, 도면 분석</p>
           <a href="#">더 알아보기<i class="fas fa-chevron-right"></i></a>
         </div>
         <div>
-          <img src="http://www.yjjob.or.kr/images/main/yo-2.png" alt="" />
+          <img src="images/yo-2.png" alt="" />
           <h3>CO2, TIG, 피복아크용접사 양성</h3>
           <p>CO2 용접, TIG 용접, 가스절단, 플라즈마 아크절단</p>
           <a href="#">더 알아보기<i class="fas fa-chevron-right"></i></a>
         </div>
         <div>
-          <img src="http://www.yjjob.or.kr/images/main/fa-1.png" alt="" />
+          <img src="images/fashion.png" alt="" />
           <h3>스마트패션디자인</h3>
-          <p>
-            패션디자인 기획, 패션상품 개발구상, 패션디자인 개발, 패션상품 시제품
-            개발
-          </p>
+          <p>패션디자인 기획, 패션상품 개발구상, 패션디자인 개발, 패션상품 시제품 개발</p>
           <a href="#">더 알아보기<i class="fas fa-chevron-right"></i></a>
         </div>
       </section>
@@ -225,51 +211,30 @@
 
       <section class="k-digital">
         <div class="content">
-          <h2>
-            빅데이터 분석과 UI구현을 위한 자바(Java), 파이썬 (Python) 개발자
-            모집중
-          </h2>
+          <h2>빅데이터 분석과 UI구현을 위한 자바(Java), 파이썬 (Python) 개발자 모집중</h2>
           <p>
-            대용량의 데이터로부터 빅데이터 분석을 통해 유용한 정보를 찾고 목적에
-            따라 UI구현기술을 사용하여 보다 정확하고 효과적이게 데이터를
-            전달하는 전문력을 가질 수 있습니다.
+            대용량의 데이터로부터 빅데이터 분석을 통해 유용한 정보를 찾고 목적에 따라 UI구현기술을 사용하여 보다 정확하고 효과적이게 데이터를 전달하는 전문력을
+            가질 수 있습니다.
           </p>
-          <a href="#" class="btn">
-            신청하러 가기<i class="fas fa-chevron-right"></i>
-          </a>
+          <a href="#" class="btn"> 신청하러 가기<i class="fas fa-chevron-right"></i> </a>
         </div>
       </section>
 
       <section class="follow">
         <a href="https://www.facebook.com/yjjob/" alt="facebook">
-          <img
-            src="http://www.yjjob.or.kr/data/banner/wzVEfAWEyQqQwSSDtBVB_1582087115.png"
-            alt=""
-          />
+          <img src="http://www.yjjob.or.kr/data/banner/wzVEfAWEyQqQwSSDtBVB_1582087115.png" alt="" />
         </a>
         <a href="http://pf.kakao.com/_bItTxd" alt="kakaotalk">
-          <img
-            src="http://www.yjjob.or.kr/data/banner/UDqigZGEW5doZh0KVkyK_1582087165.png"
-            alt=""
-          />
+          <img src="http://www.yjjob.or.kr/data/banner/UDqigZGEW5doZh0KVkyK_1582087165.png" alt="" />
         </a>
         <a href="https://www.instagram.com/yjjob8877" alt="instagram">
-          <img
-            src="http://www.yjjob.or.kr/data/banner/CL7glr7BqenPNRABVpf6_1603411157.png"
-            alt=""
-          />
+          <img src="http://www.yjjob.or.kr/data/banner/CL7glr7BqenPNRABVpf6_1603411157.png" alt="" />
         </a>
         <a href="https://blog.naver.com/yjjob8877" alt="naverblog">
-          <img
-            src="http://www.yjjob.or.kr/data/banner/i7YkK4s8jij9rqZyjvx8_1582100733.png"
-            alt=""
-          />
+          <img src="http://www.yjjob.or.kr/data/banner/i7YkK4s8jij9rqZyjvx8_1582100733.png" alt="" />
         </a>
         <a href="https://www.youtube.com/c/yjjob/videos" alt="youtube">
-          <img
-            src="http://www.yjjob.or.kr/data/banner/ihbgXxfvw9YQsPHklVhA_1679361241.png"
-            alt=""
-          />
+          <img src="http://www.yjjob.or.kr/data/banner/ihbgXxfvw9YQsPHklVhA_1679361241.png" alt="" />
         </a>
       </section>
     </div>
@@ -281,13 +246,10 @@
           <li>메일주소무단수집거부</li>
         </ul>
         <p class="contact">
-          회사명 : 영진직업전문학교 대표자 : 곽승호, 차영숙 cha8877@hanmail.net
-          Tel : 053-983-8877 Fax : 053-722-2423 개인정보보호책임자 : 이동석
+          회사명 : 영진직업전문학교 대표자 : 곽승호, 차영숙 cha8877@hanmail.net Tel : 053-983-8877 Fax : 053-722-2423 개인정보보호책임자 : 이동석
           cha8877@hanmail.net Tel : 053-983-8877 사업자번호 : 502-95-07029<br />
-          701-835 대구광역시 동구 화랑로 525(용계동), 조경실습장 : 대구 동구
-          도동 806-21<br />
-          copyright © 대구국비지원 무료교육센터 영진직업전문학교. All Rights
-          Reserved.
+          701-835 대구광역시 동구 화랑로 525(용계동), 조경실습장 : 대구 동구 도동 806-21<br />
+          copyright © 대구국비지원 무료교육센터 영진직업전문학교. All Rights Reserved.
         </p>
       </div>
     </footer>
@@ -298,7 +260,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
 
     <script>
-      const swiperEl = document.querySelector('swiper-container');
+      const swiperEl = document.querySelector("swiper-container");
       Object.assign(swiperEl, {
         slidesPerView: 1,
         spaceBetween: 10,
